--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 								</div>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://drive.google.com/file/d/1u0R0-O9m9tS2wCTi2gBVqCdxUFRlU-70/view" class="button">View Full Resume ↗</a></li>
+										<li><a href="https://drive.google.com/file/d/1p2OZWdHbNC_1VSvfn4lO1y6yjBTL5Con/view?usp=sharing" class="button">View Full Resume ↗</a></li>
 									</ul>
 								</footer>
 								
